fix: replace Map.of() with Java 8 compatible alternatives
Map.of() is Java 9+. Project targets Java 8. Use
Collections.singletonMap() for single-entry maps and new HashMap<>()
for multi-entry maps.